# quizforge

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  index.html  package.json  新建 文本文档.txt
assets/lang/: en_us.json  zh_cn.json
assets/themes/: blue.json  purple.json  yellow.json
src/: App.tsx  font.rs  localization.rs  main.rs  parser.rs  task.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/lang/: en_us.json  zh_cn.json
src-tauri/assets/themes/: default.json  gray.json  green.json  orange.json  pink.json  red.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  localization.rs  main.rs  parser.rs  theme.rs
src-tauri/src/templates/: mod.rs
src/components/: HelpTab.tsx  Preview.tsx  SettingsTab.tsx  Sidebar.tsx  TaskCard.tsx
src/hooks/: useLocale.ts
src/i18n/: en_us.json  en_us.ts  zh_cn.json  zh_cn.ts
src/styles/: global.css
src/templates/: mod.rs  theme.rs
src/types/: index.ts
src/ui/: example_tab.rs  mod.rs  tab_bar.rs
src/ui/main_tab/: empty_state.rs  generate_button.rs  mod.rs  preview.rs  task_list.rs  top_controls.rs  编译.bat
