[package]
name = "quizforge"
version = "1.0.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_extras = { version = "0.27", features = ["image"] }
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
image = "0.24"
chrono = { version = "0.4", features = ["clock"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true